--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.12.1",
     "flowbite": "^1.5.3",
+    "flowbite-datepicker": "^1.2.2",
     "flowbite-react": "^0.2.1",
     "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
